[package]
name = "torznab"
version = "0.7.2"
authors = ["Mike Cronce <mike@quadra-tec.net>"]
edition = "2018"
license = "MIT"
repository = "https://gitlab.cronce.io/foss/torznab-rs"
categories = ["api-bindings"]
keywords = ["torrent", "bittorrent"]
description = "An async client for the Torznab protocol, an extension to RSS"

[features]
parse-names = ["torrent-common/parse-names", "torrent-name-parser"]
require-parse-names = ["torrent-common/require-parse-names", "torrent-name-parser"]

[dependencies]
bytes = "1"
itertools = "0.10.3"
reqwest = {version = "0.11", default_features = false, features = ["gzip", "json", "rustls-tls"]}
rss = "2"
smartcow = "0.1"
smartstring = "0.2"
thiserror = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
torrent-common = "0.1"
torrent-name-parser = {version = "0.9", optional = true}
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["tokio"] }
urlencoding = "1"

